--- a/style.css
+++ b/style.css
@@ -102,7 +102,10 @@ body {
   font-size: 2.3rem;
   margin-bottom: 0.5rem;
 }
-
+.aman {
+width: 15%;
+border-radius: 5px 30px 30px 5px;
+}
 /* ............//// Showcase styling ////......... */
 
 .showcase-area {
