--- a/style.css
+++ b/style.css
@@ -103,8 +103,9 @@ body {
   margin-bottom: 0.5rem;
 }
 .aman {
-width: 15%;
-border-radius: 15px 50px 30px 5px;
+  width: 58.34px;
+  height: 42.73px;
+  border-radius: 15px 50px 30px 5px;
 }
 /* ............//// Showcase styling ////......... */
 
@@ -534,12 +535,17 @@ border-radius: 15px 50px 30px 5px;
     font-weight: 500;
   }
 
-  .logo {
+   .logo {
     position: absolute;
-    top: 5px;
-    right: 15px;
-    font-size: 2rem;
+    top: 03px;
+    right: 0px;
+    text-align: end;
+    padding: 0px;
+
   }
+  .aman {
+      border-radius: 30px 5px 5px 30px;
+    }
 
   .navbar-container input[type="checkbox"]:checked ~ .menu-items {
     transform: translateX(0);
@@ -616,9 +622,10 @@ border-radius: 15px 50px 30px 5px;
 
   .logo {
     position: absolute;
-    top: 06px;
-    right: 15px;
+    top: 3px;
+    right: 0px;
     font-size: 3rem;
+    text-align: end;
   }
 
   .navbar .menu-items li {
@@ -641,5 +648,16 @@ border-radius: 15px 50px 30px 5px;
 @media (orientation: landscape) and (max-height: 500px) {
   .showcase-area {
     height: 50vmax;
+  }
+}
+
+
+@media (max-width: 380px){
+  .logo{
+    position: absolute;
+    top: 8px;
+    right: 0px;
+    font-size: 3rem;
+    text-align: end;
   }
 }
